# codexize

./: .gitignore  Cargo.toml
docs/: release-notes-config.md  release-notes-providers.md  schema-v2-migration.md
scripts/: check-layers.sh
src/: adapters.rs  app.rs  app_shell.rs  artifacts.rs  cache.rs  cache_lock.rs  claude.rs  coder_summary.rs  coder_summary_tests.rs  codex.rs  dashboard.rs  dashboard_view_model.rs  diagnostics.rs  diagnostics_tests.rs  final_validation.rs  gemini.rs  input_editor.rs  input_key.rs  kimi.rs  lib.rs  main.rs  main_tests.rs  model_names.rs  model_names_tests.rs  picker.rs  preflight.rs  review.rs  review_tests.rs  runner.rs  scheduler.rs  selection.rs  simplification.rs  simplification_tests.rs  smoke.rs  state.rs  synthetic_artifacts.rs  tasks.rs  tasks_tests.rs  tmux.rs  tui.rs  (+1 more)
src/acp/: client.rs  config.rs  events.rs  mod.rs  tool_call.rs
src/adapters/: claude.rs  codex.rs  common.rs  gemini.rs  kimi.rs  mod.rs
src/app/: builder_recovery.rs  builder_recovery_tests.rs  chat.rs  chat_widget.rs  chat_widget_view_model.rs  clock.rs  config_panel.rs  events.rs  expansion.rs  finalization.rs  finalization_core.rs  finalization_reasons.rs  focus_caps.rs  frame_cache.rs  guard.rs  guard_tests.rs  input_editor.rs  keys.rs  launch.rs  lifecycle.rs  mod.rs  models.rs  models_area.rs  models_area_view_model.rs  models_tests.rs  notifications.rs  notifications_tests.rs  observation.rs  observation_tests.rs  palette.rs  prior_attempts.rs  prior_attempts_tests.rs  prompt_builders.rs  prompt_builders_tests.rs  prompt_ctx.rs  prompt_render.rs  prompt_support.rs  prompts.rs  render.rs  render_helpers.rs  (+26 more)
src/app_runtime/: command.rs  command_tests.rs  frontend.rs  harness.rs  harness_tests.rs  mod.rs  root_view.rs  run.rs  terminal.rs  terminal_tests.rs  view.rs  view_tests.rs
src/brainstorm_sync/: adapter.rs  discovery.rs  installer.rs  lock.rs  metadata.rs  mod.rs  plan.rs  upstream.rs  upstream_git.rs
src/data/: acp_config.rs  acp_events.rs  app_lock.rs  app_lock_tests.rs  artifacts.rs  artifacts_tests.rs  async_bridge.rs  atomic.rs  cache.rs  cache_lock.rs  cache_lock_tests.rs  (+30 more)
tests/: acp_runtime_boundary.rs  app_runtime_harness.rs  app_shell.rs  artifacts.rs  boundary_unwraps.rs  headless_smoke.rs  logic_eventlog.rs  logic_retry_rules.rs  logic_selection_seed.rs  logic_validation.rs  scheduler.rs  session_lifecycle.rs  smoke_baseline.rs  snapshots.rs  spawn_audit.rs  state_transition_boundary.rs  terminology.rs  ui_command_translation.rs
(+516 files in other folders)
