[package]
name = "codexize"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
crossterm = "0.29.0"
nix = { version = "0.28.0", features = ["signal", "process"] }
notify = "7.0"
ratatui = "0.30.0"
portable-pty = "0.9.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
tokio = { version = "1.39.1", features = ["fs"] }
unicode-width = "0.2.2"
pulldown-cmark = "0.13.3"

[dev-dependencies]
tempfile = "3.14"
