[package]
name = "codexize"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
crossterm = "0.29.0"
dashmap = "6.1"
derive_more = { version = "2.0", features = ["display", "from", "deref", "as_ref"] }
getrandom = "0.3"
indoc = "2.0"
itertools = "0.14"
nix = { version = "0.28.0", features = ["signal", "process"] }
notify = "7.0"
parking_lot = "0.12"
ratatui = "0.30.0"
portable-pty = "0.9.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
strip-ansi-escapes = "0.2"
thiserror = "2.0"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread", "io-util", "process", "time", "sync", "fs", "signal", "test-util"] }
tokio-util = "0.7"
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter", "fmt", "json"] }
unicode-width = "0.2.2"
pulldown-cmark = "0.13.3"
uuid = { version = "1.18.1", features = ["v4"] }
toml_edit = "0.25.11"

[dev-dependencies]
insta = "1.42"
serial_test = "3.2"
tempfile = "3.14"
